# tfbpmodeling

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  mkdocs_requirements.txt  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/workflows/: branch.yml  ci.yml
api/bootstrap_model_results/: index.html
api/bootstrapped_input_data/: index.html
api/evaluate_interactor_significance_lassocv/: index.html
api/evaluate_interactor_significance_linear/: index.html
api/interactor_significance_results/: index.html
api/interface/: index.html
api/modeling_input_data/: index.html
api/stratified_cv/: index.html
api/stratified_cv_r2/: index.html
cli/linear-perturbation-binding-modeling/: index.html
cli/overview/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: index.md
docs/api/: bootstrap_model_results.md  bootstrapped_input_data.md  evaluate_interactor_significance_lassocv.md  evaluate_interactor_significance_linear.md  interactor_significance_results.md  interface.md  modeling_input_data.md  (+2 more)
search/: search_index.json
tfbpmodeling/: SigmoidModel.py  __main__.py  bootstrap_model_results.py  bootstrap_stratified_cv.py  bootstrapped_input_data.py  evaluate_interactor_significance_lassocv.py  evaluate_interactor_significance_linear.py  generate_stage_result_table.py  interactor_significance_results.py  interface.py  lasso_modeling.py  loop_modeling.py  modeling_input_data.py  stratification_classification.py  stratified_cv.py  stratified_cv_r2.py
(+33 files in other folders)
