[tool.poetry]
name = "tfbpmodeling"
version = "0.0.0"
description = "A collection of tools and utilities to perform modeling tasks on the data from django.tfbindingandperturbation.com"
authors = ["chasem <chasem@wustl.edu>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
patsy = "^1.0.1"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mkdocs = "^1.6.1"
black = "^25.1.0"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
]
pythonpath = ['.']
addopts = "--ignore=tmp"

[tool.coverage.run]
include = ["tfbpmodeling/**"]
omit = ["*/tests/*", "experiments/"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = [
    "tfbpmodeling",
]
skip = ["venv/"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
